<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BackUp Dr.</string>
    <string name="app_name_long">BackUp Doctor</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="policy">가입하시면 <u>이용 약관</u>에 동의하시는 것으로 간주됩니다.</string>
    <string name="next">다음</string>
    <string name="back">뒤로</string>
    <string name="agree_policy">약관 동의</string>
    <string name="detail_info_input">세부 정보 입력</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="age">출생년도</string>
    <string name="height">키</string>
    <string name="centimeter">cm</string>
    <string name="kilogram">kg</string>
    <string name="weight">몸무게</string>
    <string name="blood_type">혈액형</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="male_value">male</string>
    <string name="female_value">female</string>
    <string name="smoke">흡연</string>
    <string name="drink">음주</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="drug">복용중인 약</string>
    <string name="continuous_disease">지병</string>
    <string name="alergy">알레르기</string>
    <string name="done">완료</string>
    <string name="join_complete">가입 완료!\n로그인 해주세요.</string>
    <string name="setting">설정</string>
    <string name="input_symptom">자가 진단</string>
    <string name="show_prev_history">과거 기록</string>
    <string name="drug_alert">약 복용 알람</string>
    <string name="select_department">병원 부서</string>
    <string name="surgeon">외과</string>
    <string name="medicine">내과</string>
    <string name="hurt_where">아픈 부위</string>
    <string name="body_up">상체</string>
    <string name="body_down">하체</string>
    <string name="hurt_how">아픈 유형</string>
    <string name="hurt_level">아픈 정도</string>
    <string name="hurt_detail">증상</string>
    <string name="login_error">로그인에 실패했습니다!</string>
    <string name="join_error">회원가입에 실패했습니다!</string>
    <string name="head">머리</string>
    <string name="shoulder">어깨</string>
    <string name="elbow">팔꿈치</string>
    <string name="wrist">손목</string>
    <string name="chest">가슴</string>
    <string name="stomach">배</string>
    <string name="thigh">허벅지</string>
    <string name="calf">종아리</string>
    <string name="knee">무릎</string>
    <string name="ankle">발목</string>
    <string name="foot">발</string>
    <string name="test_result">진단 기록</string>
    <string name="doctor_id">의사 아이디 입력</string>
    <string name="send">전송</string>
    <string name="cancel">취소</string>
    <string name="send_error">진단 기록 전송에 실패했습니다!</string>
    <string name="loading">잠시만 기다려주세요..</string>
</resources>
