<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="30dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/select_department"/>

            <TextView
                    android:id="@+id/department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/hurt_where"/>

            <TextView
                    android:id="@+id/where"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/hurt_how"/>

            <ImageView
                    android:id="@+id/how"
                    android:layout_width="234dp"
                    android:layout_height="79dp"
                    android:layout_marginBottom="30dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/hurt_level"/>

            <ImageView
                    android:id="@+id/level"
                    android:layout_width="149dp"
                    android:layout_height="39dp"
                    android:layout_marginBottom="30dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/hurt_detail"/>

            <ImageView
                    android:id="@+id/detail"
                    android:layout_width="79dp"
                    android:layout_height="103dp"/>

            <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/send"
                    android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>