<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/select_department"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/medicine_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:text="@string/medicine"
                android:tag="medicine"/>

        <Button
                android:id="@+id/surgeon_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/surgeon"
                android:tag="surgeon"/>

    </LinearLayout>

</LinearLayout>