<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp">

        <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription=""/>

        <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_photo"
                android:layout_centerVertical="true"/>


        <TextView
                android:id="@+id/info_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_txt"
                android:layout_centerVertical="true"/>

        <Button
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/setting"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <Button
                android:id="@+id/symptom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_symptom"/>

        <Button
                android:id="@+id/history_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_prev_history"/>

        <Button
                android:id="@+id/alert_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_alert"/>

    </LinearLayout>

</LinearLayout>